IE layout fix (doesn't support border-spacing), CSS simplification.

--- a/retroworm/retroworm.css
+++ b/retroworm/retroworm.css
@@ -9,9 +9,9 @@ body {font-family: monospace;}
 #scoreMsg {font-size: 20px;}
 #backLink {position: absolute; right: 10px;}
 #score {font-weight: bold;}
-table#gameboard { margin: 0; pagging:0; border: none; border-spacing: 0}
-tr {height: 15px; margin: 0; }
-td {width: 15px; padding: 0;  margin: 0;}
+table#gameboard {border: none;}
+tr {height: 15px;}
+td {width: 15px; padding: 0;}
 #endMsg {display: none; font-size: 20px;}
 #buttons {margin-top: 10px;}
 #instructions {margin-top: 10px;}
